--- a/UI/yolo_server/Dockerfile
+++ b/UI/yolo_server/Dockerfile
@@ -8,5 +8,6 @@ RUN pip install --no-cache-dir ultralytics opencv-python paho-mqtt numpy
 
 COPY yolo_mqtt.py .
 COPY best.pt .
+COPY model_distance.pth .
 
 CMD ["python", "yolo_mqtt.py"]
