posodobil uporabniski vmesnik

--- a/UI/yolo_server/Dockerfile
+++ b/UI/yolo_server/Dockerfile
@@ -9,5 +9,7 @@ RUN pip install --no-cache-dir ultralytics opencv-python paho-mqtt numpy
 COPY yolo_mqtt.py .
 COPY best.pt .
 COPY model_distance.pth .
+COPY model_distance2.pth .
+
 
 CMD ["python", "yolo_mqtt.py"]
