--- a/UI/yolo_server/Dockerfile
+++ b/UI/yolo_server/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 RUN apt update && apt install -y git ffmpeg libsm6 libxext6
 
 RUN pip install --no-cache-dir ultralytics opencv-python paho-mqtt numpy
+RUN pip install prometheus_client
 
 COPY yolo_mqtt.py .
 COPY best.pt .
